--- a/Template_MVC/Views/Web.config
+++ b/Template_MVC/Views/Web.config
@@ -17,7 +17,7 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
-        <add namespace="DarfonTemplate_MVC" />
+        <add namespace="Template_MVC" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
