fix rosyln issue

--- a/SYS.BLL/appsettings.json
+++ b/SYS.BLL/appsettings.json
@@ -9,7 +9,7 @@
   "Stage": "DEV",
   "Connections": {
     "Default": {
-      "DEV": "Data Source=localhost; Initial Catalog=Northwind; Persist security info=True; User ID=dfe; Password=dfe;",
+      "DEV": "Data Source=localhost,22345; Initial Catalog=Northwind; Persist security info=True; User ID=dfe; Password=dfe;",
       "QAS": "Data Source=10.83.6.23,22345; Initial Catalog=Northwind; Persist security info=True; User ID=dfe; Password=dfe;",
       "PRD": "Data Source=dfe-sql2008.dty.darfon.com; Initial Catalog=ChatBot; Persist Security Info=True; User ID=its_ChatBot_all; Password=TWChatBot@931.;"
     },
