add windows login; init Users maintain page;

--- a/Template_MVC/Template_MVC.csproj
+++ b/Template_MVC/Template_MVC.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Controllers\ProjectBase.cs" />
     <Compile Include="Controllers\QueryController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="Entity\ReturnJson.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
