--- a/Template_MVC/packages.config
+++ b/Template_MVC/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
+  <package id="axios.js" version="0.18.0" targetFramework="net48" />
   <package id="bootstrap" version="5.2.3" targetFramework="net48" />
   <package id="Captcha" version="4.4.2" targetFramework="net48" />
   <package id="jQuery" version="3.6.3" targetFramework="net48" />
@@ -31,5 +32,6 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="vue" version="2.6.11" targetFramework="net48" />
   <package id="WebGrease" version="1.6.0" targetFramework="net48" />
 </packages>
