--- a/SYS.BLL/SYS.BLL.csproj
+++ b/SYS.BLL/SYS.BLL.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Constants\Line\SimulateConstants.cs" />
     <Compile Include="Constants\SpecialEditorConstants.cs" />
     <Compile Include="Constants\TransactionLogConstants.cs" />
+    <Compile Include="Domain\IniLogic.cs" />
     <Compile Include="Domain\UsersLogic.cs" />
     <Compile Include="Domain\DateTimeLogic.cs" />
     <Compile Include="Domain\HttpContextStateLogic.cs" />
