--- a/Template_MVC/bin/appsettings.json
+++ b/Template_MVC/bin/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "Stage": "PRD",
+  "Stage": "DEV",
   "Connections": {
     "Default": {
       "DEV": "Data Source=localhost,22345; Initial Catalog=Northwind; Persist security info=True; User ID=dfe; Password=dfe;",
@@ -22,6 +22,11 @@
       "DEV": "Data Source=dfe-gaiadbdev.dty.darfon.com; Initial Catalog=gaia; Persist Security Info=True; User ID=gapp4916; Password=gaiadev@8163;",
       "QAS": "Data Source=dfe-gaiadbdev.dty.darfon.com; Initial Catalog=gaia; Persist Security Info=True; User ID=gapp4916; Password=gaiadev@8163;",
       "PRD": "Data Source=dfe-gaiadb.dty.darfon.com; Initial Catalog=gaia; Persist Security Info=True; User ID=gaia_read; Password=darfon@8163;"
+    },
+    "Northwind": {
+      "DEV": "Data Source=.\\SQLEXPRESS;Initial Catalog=Northwind ;Persist security info=True; Integrated Security=SSPI;",
+      "QAS": "",
+      "PRD": ""
     }
   }
 }
