--- a/Template_MVC/bin/SYS.BLL.dll.config
+++ b/Template_MVC/bin/SYS.BLL.dll.config
@@ -40,4 +40,16 @@
       </setting>
     </SYS.BLL.Properties.Settings>
   </applicationSettings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="GetEmpSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://dfe-aptest2.dty.darfon.com/theOrganizers/services/getemp.asmx"
+        binding="basicHttpBinding" bindingConfiguration="GetEmpSoap"
+        contract="DARFON.GAIA.GetEmpSoap" name="GetEmpSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
