--- a/Template_MVC/Template_MVC.csproj
+++ b/Template_MVC/Template_MVC.csproj
@@ -609,13 +609,13 @@
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
     <Content Include="Areas\Admin\Views\Account\Login.cshtml" />
-    <Content Include="Areas\Admin\Views\Functions\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Users\Index.cshtml" />
-    <Content Include="Areas\Admin\Views\Users\Maintain.cshtml" />
+    <Content Include="Areas\Admin\Views\Users\UserMaintain.cshtml" />
     <Content Include="Scripts\axios.min.map" />
     <Content Include="Scripts\axios.map" />
-    <Content Include="Areas\Admin\Views\Groups\Maintain.cshtml" />
-    <Content Include="Areas\Admin\Views\Ini\Maintain.cshtml" />
+    <Content Include="Areas\Admin\Views\Groups\GroupMaintain.cshtml" />
+    <Content Include="Areas\Admin\Views\Ini\ConfigMaintain.cshtml" />
+    <Content Include="Areas\Admin\Views\Functions\FunctionMaintain.cshtml" />
     <None Include="Scripts\jquery-3.6.3-vsdoc.js" />
     <Content Include="Scripts\jquery-3.6.3.js" />
     <Content Include="Scripts\jquery-3.6.3.min.js" />
