change config to config folder; change url to related path

--- a/SYS.BLL/SYS.BLL.csproj
+++ b/SYS.BLL/SYS.BLL.csproj
@@ -275,7 +275,7 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
-    <Content Include="LogicMapping.json">
+    <Content Include="Config\LogicMapping.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="Connected Services\DARFON.GAIA\getemp.wsdl" />
@@ -299,7 +299,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <Content Include="appsettings.json">
+    <Content Include="Config\appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
