--- a/Template_MVC/Web.config
+++ b/Template_MVC/Web.config
@@ -47,6 +47,8 @@
       </controls>
     </pages>  
     <authentication mode="Windows" />
+    <identity impersonate="true"/>
+    <!-- <identity impersonate="true" userName="darfon\adm_glsa" password="LoveITS@1"/> -->
     <!--<authorization>
       <deny users="?" />
     </authorization>-->
