--- a/Template_MVC/bin/SYS.BLL.dll.config
+++ b/Template_MVC/bin/SYS.BLL.dll.config
@@ -47,9 +47,7 @@
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://dfe-aptest2.dty.darfon.com/theOrganizers/services/getemp.asmx"
-        binding="basicHttpBinding" bindingConfiguration="GetEmpSoap"
-        contract="DARFON.GAIA.GetEmpSoap" name="GetEmpSoap" />
+      <endpoint address="http://dfe-aptest2.dty.darfon.com/theOrganizers/services/getemp.asmx" binding="basicHttpBinding" bindingConfiguration="GetEmpSoap" contract="DARFON.GAIA.GetEmpSoap" name="GetEmpSoap" />
     </client>
   </system.serviceModel>
 </configuration>
