--- a/Template_MVC/bin/Template_MVC.dll.config
+++ b/Template_MVC/bin/Template_MVC.dll.config
@@ -27,7 +27,8 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <!-- 设置文件上传大小的限制，单位为 KB -->
+    <httpRuntime targetFramework="4.8" maxRequestLength="10240" />
     
     <httpHandlers>
       <!-- Simple API: Register the HttpHandler used for BotDetect requests -->
@@ -47,7 +48,7 @@
       </controls>
     </pages>  
     <authentication mode="Windows" />
-    <identity impersonate="true"/>
+    <identity impersonate="true" />
     <!-- <identity impersonate="true" userName="darfon\adm_glsa" password="LoveITS@1"/> -->
     <!--<authorization>
       <deny users="?" />
@@ -73,6 +74,12 @@
         <add name="BotDetectCaptchaHandler" preCondition="integratedMode" verb="GET" path="BotDetectCaptcha.ashx" type="BotDetect.Web.CaptchaHandler, BotDetect" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
+    <security>
+      <requestFiltering>
+        <!-- 设置最大请求内容长度限制，单位为 bytes -->
+        <requestLimits maxAllowedContentLength="10485760" />
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
